--- a/gui/forms/QGMDialogMatrix.ui
+++ b/gui/forms/QGMDialogMatrix.ui
@@ -251,14 +251,14 @@
         </attribute>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <widget class="QPushButton" name="pushButton_2">
+          <widget class="QPushButton" name="pushButton_loadFromClipboard">
            <property name="text">
             <string>Load from clipboard</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="pushButton_CopyToClipboard">
            <property name="text">
             <string>Copy to clipboard</string>
            </property>
@@ -271,35 +271,35 @@
          <string>Translate</string>
         </attribute>
         <layout class="QFormLayout" name="formLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>x</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="lineEdit_transX"/>
-         </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>y</string>
+            <string>Y</string>
            </property>
           </widget>
          </item>
          <item row="2" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>z</string>
+            <string>Z</string>
            </property>
           </widget>
          </item>
+         <item row="0" column="1">
+          <widget class="QDoubleSpinBox" name="doubleSpinBox_transX"/>
+         </item>
          <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_transY"/>
+          <widget class="QDoubleSpinBox" name="doubleSpinBox_transY"/>
          </item>
          <item row="2" column="1">
-          <widget class="QLineEdit" name="lineEdit_transZ"/>
+          <widget class="QDoubleSpinBox" name="doubleSpinBox_transZ"/>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>X</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
@@ -309,9 +309,12 @@
         </attribute>
         <layout class="QFormLayout" name="formLayout_2">
          <item row="0" column="0">
-          <widget class="QRadioButton" name="radioButton">
+          <widget class="QRadioButton" name="radioButton_axisX">
            <property name="text">
-            <string>x Axis</string>
+            <string>X Axis</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
            <attribute name="buttonGroup">
             <string notr="true">buttonGroup_axisSel</string>
@@ -319,9 +322,9 @@
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QRadioButton" name="radioButton_2">
+          <widget class="QRadioButton" name="radioButton_axisY">
            <property name="text">
-            <string>y Axis</string>
+            <string>Y Axis</string>
            </property>
            <attribute name="buttonGroup">
             <string notr="true">buttonGroup_axisSel</string>
@@ -329,9 +332,9 @@
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QRadioButton" name="radioButton_3">
+          <widget class="QRadioButton" name="radioButton_axisZ">
            <property name="text">
-            <string>z Axis</string>
+            <string>Z Axis</string>
            </property>
            <attribute name="buttonGroup">
             <string notr="true">buttonGroup_axisSel</string>
@@ -339,7 +342,7 @@
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QRadioButton" name="radioButton_4">
+          <widget class="QRadioButton" name="radioButton_axisFree">
            <property name="text">
             <string>Free Axis</string>
            </property>
@@ -351,13 +354,52 @@
          <item row="3" column="1">
           <layout class="QHBoxLayout" name="horizontalLayout_4">
            <item>
-            <widget class="QLineEdit" name="lineEdit_axisX"/>
+            <widget class="QDoubleSpinBox" name="doubleSpinBox_axisX">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-1.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.010000000000000</double>
+             </property>
+             <property name="value">
+              <double>1.000000000000000</double>
+             </property>
+            </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_axisY"/>
+            <widget class="QDoubleSpinBox" name="doubleSpinBox_axisY">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-1.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.010000000000000</double>
+             </property>
+            </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_axisZ"/>
+            <widget class="QDoubleSpinBox" name="doubleSpinBox_axisZ">
+             <property name="minimum">
+              <double>-1.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.010000000000000</double>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -371,10 +413,26 @@
          <item row="4" column="1">
           <layout class="QHBoxLayout" name="horizontalLayout_5">
            <item alignment="Qt::AlignTop">
-            <widget class="QLineEdit" name="lineEdit_angle"/>
+            <widget class="QDoubleSpinBox" name="doubleSpinBox_angle">
+             <property name="alignment">
+              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+             </property>
+             <property name="minimum">
+              <double>-360.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>360.000000000000000</double>
+             </property>
+            </widget>
            </item>
            <item alignment="Qt::AlignTop">
             <widget class="QSlider" name="horizontalSlider_angle">
+             <property name="maximum">
+              <number>7200</number>
+             </property>
+             <property name="value">
+              <number>3600</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -392,32 +450,58 @@
          <item row="0" column="0">
           <widget class="QLabel" name="label_5">
            <property name="text">
-            <string>x</string>
+            <string>X</string>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLineEdit" name="lineEdit_scaleX"/>
+          <widget class="QDoubleSpinBox" name="doubleSpinBox_scaleX">
+           <property name="value">
+            <double>1.000000000000000</double>
+           </property>
+          </widget>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_6">
            <property name="text">
-            <string>y</string>
+            <string>Y</string>
            </property>
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_scaleY"/>
+          <widget class="QDoubleSpinBox" name="doubleSpinBox_scaleY">
+           <property name="value">
+            <double>1.000000000000000</double>
+           </property>
+          </widget>
          </item>
          <item row="2" column="0">
           <widget class="QLabel" name="label_7">
            <property name="text">
-            <string>z</string>
+            <string>Z</string>
            </property>
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QLineEdit" name="lineEdit_scaleZ"/>
+          <widget class="QDoubleSpinBox" name="doubleSpinBox_scaleZ">
+           <property name="value">
+            <double>1.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>Uniform Scale</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QCheckBox" name="checkBox_scaleUniform">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
