--- a/gui/forms/QGMDialogMatrix.ui
+++ b/gui/forms/QGMDialogMatrix.ui
@@ -478,11 +478,14 @@
            </item>
            <item alignment="Qt::AlignTop">
             <widget class="QSlider" name="horizontalSlider_angle">
+             <property name="minimum">
+              <number>-3600</number>
+             </property>
              <property name="maximum">
-              <number>7200</number>
+              <number>3600</number>
              </property>
              <property name="value">
-              <number>3600</number>
+              <number>0</number>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
