--- a/gui/forms/mainWin.ui
+++ b/gui/forms/mainWin.ui
@@ -38,7 +38,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>24</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -305,6 +305,8 @@
      <addaction name="actionDatumAddSphere"/>
      <addaction name="separator"/>
      <addaction name="actionEditVerticesAdd"/>
+     <addaction name="separator"/>
+     <addaction name="actionExtrudePolylines"/>
     </widget>
     <widget class="QMenu" name="menuTransform_Extra">
      <property name="title">
