--- a/gui/forms/QGMDialogMatrix.ui
+++ b/gui/forms/QGMDialogMatrix.ui
@@ -634,7 +634,7 @@
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="standardButtons">
-        <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::Reset</set>
+        <set>QDialogButtonBox::Apply|QDialogButtonBox::Close|QDialogButtonBox::Reset</set>
        </property>
       </widget>
      </item>
