--- a/gui/forms/qgmdockinfo.ui
+++ b/gui/forms/qgmdockinfo.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>313</width>
-    <height>350</height>
+    <height>379</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,7 +19,7 @@
   <property name="minimumSize">
    <size>
     <width>313</width>
-    <height>350</height>
+    <height>379</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -215,7 +215,7 @@
          </size>
         </property>
         <property name="text">
-         <string>IWR Internal</string>
+         <string>IWR Open Source</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
