--- a/gui/forms/gigamesh.qrc
+++ b/gui/forms/gigamesh.qrc
@@ -75,6 +75,8 @@
         <file>gigamesh_icon_mesh_information.svg</file>
         <file>gigamesh_icon_compute_msii_quick.svg</file>
         <file>gigamesh_icon_screenshot.svg</file>
+        <file>gigamesh_icon_screenshot_pdf.svg</file>
+        <file>gigamesh_icon_screenshot_svg.svg</file>
     </qresource>
     <qresource prefix="/GMToolTipImages">
         <file>tooltips/rendering_flat_smooth_egde_on.png</file>
