--- a/gui/forms/mainWin.ui
+++ b/gui/forms/mainWin.ui
@@ -38,7 +38,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>45</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -95,14 +95,6 @@
       <string>Open Recent &amp;Files</string>
      </property>
     </widget>
-    <widget class="QMenu" name="menuExport_Polylines">
-     <property name="title">
-      <string>&amp;Export Polylines</string>
-     </property>
-     <addaction name="actionExportPolylines"/>
-     <addaction name="actionExportPolylinesProjected"/>
-     <addaction name="actionExportPolylinesFuncVals"/>
-    </widget>
     <widget class="QMenu" name="menuExport_Screenshots_Parse_Directory">
      <property name="title">
       <string>Export Screenshots - Parse Directory</string>
@@ -112,6 +104,36 @@
      <addaction name="actionScreenshotViewsPNGDirectory"/>
      <addaction name="actionScreenshotViewsPDFDirectory"/>
     </widget>
+    <widget class="QMenu" name="menuImport">
+     <property name="title">
+      <string>Import</string>
+     </property>
+     <addaction name="actionImportFeatureVectors"/>
+     <addaction name="actionImportFunctionValues"/>
+     <addaction name="separator"/>
+     <addaction name="actionImportNormals"/>
+     <addaction name="actionImportTexMap"/>
+     <addaction name="separator"/>
+     <addaction name="actionImportVertexCoordinatesFromCSV"/>
+    </widget>
+    <widget class="QMenu" name="menuExport">
+     <property name="title">
+      <string>Export</string>
+     </property>
+     <addaction name="actionExportFeatureVectors"/>
+     <addaction name="actionExportFuncVals"/>
+     <addaction name="separator"/>
+     <addaction name="actionExportCoordinatesOfAllVerticesAsCSV"/>
+     <addaction name="actionExportCoordinatesOfSelectedVerticesAsCSV"/>
+     <addaction name="actionExportCoordinatesOfSelectedPrimitivesAsCSV"/>
+     <addaction name="separator"/>
+     <addaction name="actionExportFaceNormalAngles"/>
+     <addaction name="actionExport_Normal_Sphere_Data"/>
+     <addaction name="separator"/>
+     <addaction name="actionExportPolylines"/>
+     <addaction name="actionExportPolylinesProjected"/>
+     <addaction name="actionExportPolylinesFuncVals"/>
+    </widget>
     <addaction name="actionFileOpen"/>
     <addaction name="menuFileRecent"/>
     <addaction name="actionFileReload"/>
@@ -120,22 +142,10 @@
     <addaction name="actionSaveFlagGMExtras"/>
     <addaction name="actionSaveFlagTextureExport"/>
     <addaction name="separator"/>
-    <addaction name="actionImportVertexCoordinatesFromCSV"/>
-    <addaction name="actionImportFeatureVectors"/>
-    <addaction name="actionImportFunctionValues"/>
-    <addaction name="actionImportNormals"/>
-    <addaction name="actionImportTexMap"/>
+    <addaction name="menuImport"/>
+    <addaction name="menuExport"/>
     <addaction name="separator"/>
-    <addaction name="actionExportFeatureVectors"/>
-    <addaction name="actionExportFuncVals"/>
-    <addaction name="separator"/>
-    <addaction name="actionExportCoordinatesOfAllVerticesAsCSV"/>
-    <addaction name="actionExportCoordinatesOfSelectedVerticesAsCSV"/>
-    <addaction name="actionExportCoordinatesOfSelectedPrimitivesAsCSV"/>
     <addaction name="actionExportPlaneIntersectSVG"/>
-    <addaction name="actionExportFaceNormalAngles"/>
-    <addaction name="menuExport_Polylines"/>
-    <addaction name="actionExport_Normal_Sphere_Data"/>
     <addaction name="separator"/>
     <addaction name="menuExportScreenshots"/>
     <addaction name="menuExport_Screenshots_Parse_Directory"/>
@@ -1615,6 +1625,10 @@
    </property>
   </action>
   <action name="actionScreenshotSVG">
+   <property name="icon">
+    <iconset resource="gigamesh.qrc">
+     <normaloff>:/GMToolBar/gigamesh_icon_screenshot_svg.svg</normaloff>:/GMToolBar/gigamesh_icon_screenshot_svg.svg</iconset>
+   </property>
    <property name="text">
     <string>Screenshot (SVG+&amp;PNG)</string>
    </property>
@@ -4181,6 +4195,10 @@ p, li { white-space: pre-wrap; }
    </property>
   </action>
   <action name="actionScreenshotPDF">
+   <property name="icon">
+    <iconset resource="gigamesh.qrc">
+     <normaloff>:/GMToolBar/gigamesh_icon_screenshot_pdf.svg</normaloff>:/GMToolBar/gigamesh_icon_screenshot_pdf.svg</iconset>
+   </property>
    <property name="text">
     <string>Screenshot (PDF with TEX+PNG)</string>
    </property>
