- Refactored shader storage out of meshglshader - Lazy initialization of shaders - refactored func-val shader into three (color, funcval and label) - fixed some warnings in face and plane - updated changelog

--- a/gui/src/shaders/shaders.qrc
+++ b/gui/src/shaders/shaders.qrc
@@ -65,5 +65,8 @@
         <file>normalSphere/IcosphereShader.frag</file>
         <file>textureMesh/texturemesh.vert</file>
         <file>textureMesh/texturemesh.frag</file>
+        <file>funcval/vertexColor.frag</file>
+        <file>funcval/funcVal.frag</file>
+        <file>funcval/label.frag</file>
     </qresource>
 </RCC>
