--- a/gui/forms/gigamesh.qrc
+++ b/gui/forms/gigamesh.qrc
@@ -77,6 +77,11 @@
         <file>gigamesh_icon_screenshot.svg</file>
         <file>gigamesh_icon_screenshot_pdf.svg</file>
         <file>gigamesh_icon_screenshot_svg.svg</file>
+        <file>gigamesh_icon_export_all.svg</file>
+        <file>gigamesh_icon_export_html.svg</file>
+        <file>gigamesh_icon_export_xml.svg</file>
+        <file>gigamesh_icon_export_json.svg</file>
+        <file>gigamesh_icon_export_ttl.svg</file>
     </qresource>
     <qresource prefix="/GMToolTipImages">
         <file>tooltips/rendering_flat_smooth_egde_on.png</file>
